--- a/_modules/thetis/stability_functions.html
+++ b/_modules/thetis/stability_functions.html
@@ -1,18 +1,18 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>thetis.stability_functions &#8212; Thetis 0+untagged.1409.g7b98a42 documentation</title>
+    <title>thetis.stability_functions &#8212; Thetis 0+untagged.1562.gc08033a documentation</title>
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
-    <script type="text/javascript" src="../../_static/jquery.js"></script>
-    <script type="text/javascript" src="../../_static/underscore.js"></script>
-    <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <script type="text/javascript" src="../../_static/language_data.js"></script>
-    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
+    <script src="../../_static/jquery.js"></script>
+    <script src="../../_static/underscore.js"></script>
+    <script src="../../_static/doctools.js"></script>
+    <script src="../../_static/language_data.js"></script>
+    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -89,11 +89,11 @@
 <span class="sd">http://dx.doi.org/10.1357/002224003322005087</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
-<span class="kn">from</span> <span class="nn">__future__</span> <span class="k">import</span> <span class="n">absolute_import</span>
+<span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">absolute_import</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
-<span class="kn">from</span> <span class="nn">abc</span> <span class="k">import</span> <span class="n">ABC</span><span class="p">,</span> <span class="n">abstractmethod</span>
-<span class="kn">from</span> <span class="nn">scipy.optimize</span> <span class="k">import</span> <span class="n">minimize</span>
-<span class="kn">from</span> <span class="nn">.log</span> <span class="k">import</span> <span class="n">print_output</span>
+<span class="kn">from</span> <span class="nn">abc</span> <span class="kn">import</span> <span class="n">ABC</span><span class="p">,</span> <span class="n">abstractmethod</span>
+<span class="kn">from</span> <span class="nn">scipy.optimize</span> <span class="kn">import</span> <span class="n">minimize</span>
+<span class="kn">from</span> <span class="nn">.log</span> <span class="kn">import</span> <span class="n">print_output</span>
 
 
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span>
@@ -143,7 +143,7 @@
     <span class="k">def</span> <span class="nf">name</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">pass</span>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lim_alpha_shear</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">lim_alpha_buoy</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lim_alpha_shear</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">lim_alpha_buoy</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">smooth_alpha_buoy_lim</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">alpha_buoy_crit</span><span class="o">=-</span><span class="mf">1.2</span><span class="p">):</span>
         <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :kwarg bool lim_alpha_shear: limit maximum :math:`\alpha_M` values</span>
@@ -480,7 +480,7 @@
     <span class="k">def</span> <span class="nf">cbb</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">pass</span>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lim_alpha_shear</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">lim_alpha_buoy</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lim_alpha_shear</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">lim_alpha_buoy</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">smooth_alpha_buoy_lim</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">alpha_buoy_crit</span><span class="o">=-</span><span class="mf">1.2</span><span class="p">):</span>
         <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :kwarg bool lim_alpha_shear: limit maximum :math:`\alpha_M` values</span>
@@ -576,7 +576,7 @@
     <span class="k">def</span> <span class="nf">l8</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">pass</span>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lim_alpha_shear</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">lim_alpha_buoy</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lim_alpha_shear</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">lim_alpha_buoy</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">smooth_alpha_buoy_lim</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">alpha_buoy_crit</span><span class="o">=-</span><span class="mf">1.2</span><span class="p">):</span>
         <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :kwarg bool lim_alpha_shear: limit maximum :math:`\alpha_M` values</span>
@@ -685,7 +685,7 @@
     <span class="k">def</span> <span class="nf">l8</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">pass</span>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lim_alpha_shear</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">lim_alpha_buoy</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">lim_alpha_shear</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">lim_alpha_buoy</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">smooth_alpha_buoy_lim</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">alpha_buoy_crit</span><span class="o">=-</span><span class="mf">1.2</span><span class="p">):</span>
         <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :kwarg bool lim_alpha_shear: limit maximum :math:`\alpha_M` values</span>
@@ -886,8 +886,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2019, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.1.2.
+        &#169; Copyright 2016-2020, Tuomas Karna et al..
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.0.3.
     </div>
   </body>
 </html>
