--- a/_modules/thetis/forcing.html
+++ b/_modules/thetis/forcing.html
@@ -1,18 +1,18 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>thetis.forcing &#8212; Thetis 0+untagged.1409.g7b98a42 documentation</title>
+    <title>thetis.forcing &#8212; Thetis 0+untagged.1562.gc08033a documentation</title>
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-    <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
-    <script type="text/javascript" src="../../_static/jquery.js"></script>
-    <script type="text/javascript" src="../../_static/underscore.js"></script>
-    <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <script type="text/javascript" src="../../_static/language_data.js"></script>
-    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
+    <script src="../../_static/jquery.js"></script>
+    <script src="../../_static/underscore.js"></script>
+    <script src="../../_static/doctools.js"></script>
+    <script src="../../_static/language_data.js"></script>
+    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -56,18 +56,18 @@
 <span></span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">Routines for interpolating forcing fields for the 3D solver.</span>
 <span class="sd">&quot;&quot;&quot;</span>
-<span class="kn">from</span> <span class="nn">firedrake</span> <span class="k">import</span> <span class="o">*</span>
+<span class="kn">from</span> <span class="nn">firedrake</span> <span class="kn">import</span> <span class="o">*</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">import</span> <span class="nn">scipy.spatial.qhull</span> <span class="k">as</span> <span class="nn">qhull</span>
 <span class="kn">import</span> <span class="nn">thetis.timezone</span> <span class="k">as</span> <span class="nn">timezone</span>
 <span class="kn">import</span> <span class="nn">thetis.interpolation</span> <span class="k">as</span> <span class="nn">interpolation</span>
 <span class="kn">import</span> <span class="nn">thetis.coordsys</span> <span class="k">as</span> <span class="nn">coordsys</span>
-<span class="kn">from</span> <span class="nn">.log</span> <span class="k">import</span> <span class="o">*</span>
+<span class="kn">from</span> <span class="nn">.log</span> <span class="kn">import</span> <span class="o">*</span>
 <span class="kn">import</span> <span class="nn">netCDF4</span>
 <span class="kn">import</span> <span class="nn">thetis.physical_constants</span> <span class="k">as</span> <span class="nn">physical_constants</span>
 <span class="kn">import</span> <span class="nn">uptide</span>
 <span class="kn">import</span> <span class="nn">uptide.tidal_netcdf</span>
-<span class="kn">from</span> <span class="nn">abc</span> <span class="k">import</span> <span class="n">ABCMeta</span><span class="p">,</span> <span class="n">abstractmethod</span><span class="p">,</span> <span class="n">abstractproperty</span>
+<span class="kn">from</span> <span class="nn">abc</span> <span class="kn">import</span> <span class="n">ABCMeta</span><span class="p">,</span> <span class="n">abstractmethod</span><span class="p">,</span> <span class="n">abstractproperty</span>
 <span class="kn">import</span> <span class="nn">os</span>
 
 
@@ -124,7 +124,7 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    A TimeParser class for reading WRF/NAM atmospheric forecast files.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">filename</span><span class="p">,</span> <span class="n">max_duration</span><span class="o">=</span><span class="mf">24.</span><span class="o">*</span><span class="mf">3600.</span><span class="p">,</span> <span class="n">verbose</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">filename</span><span class="p">,</span> <span class="n">max_duration</span><span class="o">=</span><span class="mf">24.</span><span class="o">*</span><span class="mf">3600.</span><span class="p">,</span> <span class="n">verbose</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg filename:</span>
 <span class="sd">        :kwarg max_duration: Time span to read from each file (in secords,</span>
@@ -152,7 +152,7 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Interpolates WRF/NAM atmospheric model data on 2D fields.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">wind_stress_field</span><span class="p">,</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">wind_stress_field</span><span class="p">,</span>
                  <span class="n">atm_pressure_field</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">,</span>
                  <span class="n">ncfile_pattern</span><span class="p">,</span> <span class="n">init_date</span><span class="p">,</span> <span class="n">target_coordsys</span><span class="p">,</span> <span class="n">verbose</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -208,7 +208,7 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Base class for 2D and 3D NCOM spatial interpolators.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">,</span> <span class="n">grid_path</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">,</span> <span class="n">grid_path</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: Target (scalar) :class:`FunctionSpace` object onto</span>
 <span class="sd">            which data will be interpolated.</span>
@@ -260,7 +260,7 @@
         <span class="n">mask_cover</span> <span class="o">*=</span> <span class="n">mask_good_values</span>
         <span class="c1"># include nearest valid neighbors</span>
         <span class="c1"># needed for nearest neighbor filling</span>
-        <span class="kn">from</span> <span class="nn">scipy.spatial</span> <span class="k">import</span> <span class="n">cKDTree</span>
+        <span class="kn">from</span> <span class="nn">scipy.spatial</span> <span class="kn">import</span> <span class="n">cKDTree</span>
         <span class="n">good_lat</span> <span class="o">=</span> <span class="n">lat</span><span class="p">[</span><span class="n">mask_good_values</span><span class="p">]</span>
         <span class="n">good_lon</span> <span class="o">=</span> <span class="n">lon</span><span class="p">[</span><span class="n">mask_good_values</span><span class="p">]</span>
         <span class="n">ll</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">vstack</span><span class="p">([</span><span class="n">good_lat</span><span class="o">.</span><span class="n">ravel</span><span class="p">(),</span> <span class="n">good_lon</span><span class="o">.</span><span class="n">ravel</span><span class="p">()])</span><span class="o">.</span><span class="n">T</span>
@@ -298,7 +298,7 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Spatial interpolator class for interpolatin NCOM ocean model 3D fields.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">,</span> <span class="n">grid_path</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">,</span> <span class="n">grid_path</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: Target (scalar) :class:`FunctionSpace` object onto</span>
 <span class="sd">            which data will be interpolated.</span>
@@ -384,7 +384,7 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Spatial interpolator class for interpolatin NCOM ocean model 2D fields.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">,</span> <span class="n">grid_path</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">,</span> <span class="n">grid_path</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: Target (scalar) :class:`FunctionSpace` object onto</span>
 <span class="sd">            which data will be interpolated.</span>
@@ -467,7 +467,7 @@
 <span class="sd">        ./forcings/ncom/2006/ssh/ssh.glb8_2f_2006041900.nc</span>
 <span class="sd">        ./forcings/ncom/2006/ssh/ssh.glb8_2f_2006042000.nc</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space_2d</span><span class="p">,</span> <span class="n">function_space_3d</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">field_names</span><span class="p">,</span> <span class="n">field_fnstr</span><span class="p">,</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space_2d</span><span class="p">,</span> <span class="n">function_space_3d</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">field_names</span><span class="p">,</span> <span class="n">field_fnstr</span><span class="p">,</span>
                  <span class="n">to_latlon</span><span class="p">,</span> <span class="n">basedir</span><span class="p">,</span>
                  <span class="n">file_pattern</span><span class="p">,</span> <span class="n">init_date</span><span class="p">,</span> <span class="n">target_coordsys</span><span class="p">,</span> <span class="n">verbose</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -552,7 +552,7 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Abstract spatial interpolator class that can interpolate onto a Function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: target Firedrake FunctionSpace</span>
 <span class="sd">        :arg to_latlon: Python function that converts local mesh coordinates to</span>
@@ -676,7 +676,7 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Interpolates LiveOcean (ROMS) model data on 3D fields</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">field_names</span><span class="p">,</span> <span class="n">ncfile_pattern</span><span class="p">,</span> <span class="n">init_date</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">field_names</span><span class="p">,</span> <span class="n">ncfile_pattern</span><span class="p">,</span> <span class="n">init_date</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">function_space</span> <span class="o">=</span> <span class="n">function_space</span>
         <span class="k">for</span> <span class="n">f</span> <span class="ow">in</span> <span class="n">fields</span><span class="p">:</span>
             <span class="k">assert</span> <span class="n">f</span><span class="o">.</span><span class="n">function_space</span><span class="p">()</span> <span class="o">==</span> <span class="bp">self</span><span class="o">.</span><span class="n">function_space</span><span class="p">,</span> <span class="s1">&#39;field </span><span class="se">\&#39;</span><span class="si">{:}</span><span class="se">\&#39;</span><span class="s1"> does not belong to given function space </span><span class="si">{:}</span><span class="s1">.&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">f</span><span class="o">.</span><span class="n">name</span><span class="p">(),</span> <span class="bp">self</span><span class="o">.</span><span class="n">function_space</span><span class="o">.</span><span class="n">name</span><span class="p">)</span>
@@ -732,7 +732,7 @@
         <span class="sd">&quot;&quot;&quot;Grid NetCDF file name.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="kc">None</span>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">elev_field</span><span class="p">,</span> <span class="n">init_date</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">,</span> <span class="n">target_coordsys</span><span class="p">,</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">elev_field</span><span class="p">,</span> <span class="n">init_date</span><span class="p">,</span> <span class="n">to_latlon</span><span class="p">,</span> <span class="n">target_coordsys</span><span class="p">,</span>
                  <span class="n">uv_field</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">constituents</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">boundary_ids</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                  <span class="n">data_dir</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -880,8 +880,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2019, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.1.2.
+        &#169; Copyright 2016-2020, Tuomas Karna et al..
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.0.3.
     </div>
   </body>
 </html>
